Added manual page

--- a/manual.html
+++ b/manual.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/madlag/jarvis">View on GitHub</a>
 
-          <h1 id="project_title">Jarvis</h1>
+          <h1 id="project_title"><a href="..">Jarvis</a></h1>
           <h2 id="project_tagline">Python development companion.</h2>
 
             <section id="downloads">
