--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
           <h1 id="project_title">Jarvis</h1>
           <h2 id="project_tagline">Python development companion.</h2>
 
+          <section id="header_links">
+            <a class="project_link" href="manual.html">Manual<a>
+            <a class="project_link" href="manual.html">Manual<a>
+          </section>
+
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/madlag/jarvis/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/madlag/jarvis/tarball/master">Download this project as a tar.gz file</a>
