--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <h1>Inspiration</h1>
 
 <p>Jarvis was inspired by works of <a href="http://worrydream.com/">Bret Victor</a>, especially his talk <a href="http://www.youtube.com/watch?v=PUv66718DII">Inventing on Principle</a>.
-The central idea is that the feedback loop when you are coding should be the shortest possible, so you can see the effect of your code changes instantly, or almost.
-Jarvis implements a (small ?) subset of these ideas.</p>
+The central idea is that the feedback loop when you are coding should be the shortest possible, so you can see the effect of your code changes instantly, or almost.</p>
+<p>Jarvis implements a (small ?) subset of these ideas.</p>
 
-<h1>What can I do with jarvis ? </h1>
+<h1>What can I do with Jarvis ? </h1>
 <p>The best way to discover it is to watch the demo video.</p>
 
 <iframe width="560" height="315" src="http://www.youtube.com/embed/W8YVIQUB_tI" frameborder="0" allowfullscreen></iframe>
