changed front page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ The central idea is that the feedback loop when you are coding should be the sho
 <iframe width="560" height="315" src="http://www.youtube.com/embed/W8YVIQUB_tI" frameborder="0" allowfullscreen></iframe>
 
 <h1>How would you define Jarvis ? </h1>
-<p>Jarvis is a Python programming companion. Point it to a python function, and it will execute it.
+<p>Jarvis is a Python coding companion. Point it to a python function, and it will execute it.
 As soon as you change your code in your favorite text editor, Jarvis will detect it, and will rerun the function, using some nice Python tricks to reload code without rerunning the full interpreter.</p>
 
 <p>You can insert in your code some debug statements, that will be displayed in the Jarvis interface. If an exception is raised, it will be shown as well.</p>
@@ -69,13 +69,8 @@ As soon as you change your code in your favorite text editor, Jarvis will detect
 
 <h1>Installation</h1>
 
-<p>You just have to install the dependencies (osg, osgswig, qt, pyqt) and then <code>pip install pip</code>.</p>
+<p>You just have to install the dependencies (osg, osgswig, qt, pyqt, pymacs, jinja2) and then <code>pip install pip</code>.</p>
 
-<p>Alternatively, you can use : <code>git clone https://github.com/madlag/jarvis.git jarvis</code></p>
-
-<p>then <code>sudo python setup.py install</code></p>
-
-<p>or better, <code>sudo python setup.py develop</code>, to edit the code without reinstalling.</p>
 
 <h1>Authors</h1>
 
