changed front page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <p>Jarvis was inspired by works of <a href="http://worrydream.com/">Bret Victor</a>, especially his talk <a href="http://www.youtube.com/watch?v=PUv66718DII">Inventing on Principle</a>.
 The central idea is that the feedback loop when you are coding should be the shortest possible, so you can see the effect of your code changes instantly, or almost.</p>
 <p>Jarvis implements a (small ?) subset of these ideas.</p>
+<p>Those ideas are also used in the <a href="http://www.kickstarter.com/projects/ibdknox/light-table">Light Table</a> KickStarter project.</p>
 
 <h1>What can I do with Jarvis ? </h1>
 <p>The best way to discover it is to watch the demo video.</p>
