--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ The central idea is that the feedback loop when you are coding should be the sho
 <h1>What can I do with Jarvis ? </h1>
 <p>The best way to discover it is to watch the demo video.</p>
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/W8YVIQUB_tI" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/fbpx7UL7VdE" frameborder="0" allowfullscreen></iframe>
 
 <h1>How would you define Jarvis ? </h1>
 <p>Jarvis is a Python coding companion. Point it to a python function, and it will execute it.
