Fixed typo pip install pip

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ As soon as you change your code in your favorite text editor, Jarvis will detect
 
 <h1>Installation</h1>
 
-<p>You just have to install the dependencies (osg, osgswig, qt, pyqt, pymacs, jinja2) and then <code>pip install pip</code>.</p>
+<p>You just have to install the dependencies (osg, osgswig, qt, pyqt, pymacs, jinja2) and then <code>pip install jarvis</code>.</p>
 
 
 <h1>Authors</h1>
