Added gittip button, just in case someone want to help ;-)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <!-- style="border: 0; margin: 0; padding: 0;" -->
+
           <a id="forkme_banner" href="https://github.com/madlag/jarvis">View on GitHub</a>
 
           <h1 id="project_title">Jarvis</h1>
@@ -36,6 +38,7 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+
       <section id="main_content" class="inner">
         <h1>Inspiration</h1>
 
@@ -71,6 +74,12 @@ As soon as you change your code in your favorite text editor, Jarvis will detect
 <h1>Installation</h1>
 
 <p>You just have to install the dependencies (osg, osgswig, qt, pyqt, pymacs, jinja2) and then <code>pip install jarvis</code>.</p>
+
+<h1>Contribute</h1>
+<p>You can help me work on this project using gittip: </p>
+<iframe style="border: 0; margin: 0; padding: 0;"
+        src="https://www.gittip.com/madlag/widget.html" 
+        width="48pt" height="20pt"></iframe>
 
 
 <h1>Authors</h1>
