Changed 'Contribute' to 'Donate'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ As soon as you change your code in your favorite text editor, Jarvis will detect
 
 <p>You just have to install the dependencies (osg, osgswig, qt, pyqt, pymacs, jinja2) and then <code>pip install jarvis</code>.</p>
 
-<h1>Contribute</h1>
+<h1>Donate</h1>
 <p>You can help me work on this project using gittip: </p>
 <iframe style="border: 0; margin: 0; padding: 0;"
         src="https://www.gittip.com/madlag/widget.html" 
