--- a/jarvis/server/media/index.html
+++ b/jarvis/server/media/index.html
@@ -2,21 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>EventSource example</title>
+    <title>Jarvis</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="eventsource.js"></script>
-    <script src="mootools-1.2.5-core-nc.js"></script>
+    <script src="mootools-core-1.4.5.js"></script>
+    <script src="mootools-more-1.4.0.1.js"></script>
     <script src="broker.js"></script>
     <script>
-
-      broker = new Broker('http://localhost:9017/state/stream/eventsource/', Math.random());
+      broker = new Broker('http://127.0.0.1:9017/state/stream/eventsource/', Math.random());
 
       textView = new TextView(broker, "debug");
 
     </script>
 </head>
 <body>
-<h1>Jarvis</h1>
+<h1>Debug</h1>
 <div id="debug" />
 </body>
 </html>
