--- a/jarvis/server/media/index.html
+++ b/jarvis/server/media/index.html
@@ -18,15 +18,19 @@
     </script>
 </head>
 <body>
-<h1>Debug</h1>
+<!--
 <div id="editor">function foo(items) {
     var x = "All this is syntax highlighted";
     return x;
 }</div>
+-->
+<h1>Debug</h1>
 <div id="debug" />
-<script src="http://rawgithub.com/ajaxorg/ace-builds/master/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<!--
+<script src="ace.js" type="text/javascript" charset="utf-8"></script>
 <script>
     var editor = new TextEditor(broker, "editor");
 </script>
+-->
 </body>
 </html>
